# KommandLineAutomation

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
demos/: README.md
examples/: git-workflow.kla.yaml  kla-showcase.kla.yaml  meta-demo.kla.yaml  recursive-demo.kla.yaml  simple-demo.kla.yaml
src/: error.rs  lib.rs  main.rs  terminal.rs
src/cli/: commands.rs  mod.rs
src/media/: gif.rs  mod.rs  recorder.rs  screenshot.rs
src/pty/: capture.rs  controller.rs  mod.rs
src/script/: loader.rs  mod.rs  types.rs
