[package]
name = "kla"
version = "0.1.0"
edition = "2021"
description = "KLA (Kommand Line Automation) - A Playwright equivalent for beautiful CLI recordings"
license = "MIT"
authors = ["KLA Team"]
repository = "https://github.com/kooshapari/KommandLineAutomation"
keywords = ["cli", "terminal", "recording", "automation", "gif"]
categories = ["command-line-utilities", "multimedia", "development-tools"]

[[bin]]
name = "kla"
path = "src/main.rs"

[dependencies]
# Terminal and PTY handling
portable-pty = "0.8"
crossterm = "0.27"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Image processing and recording
image = "0.24"
gif = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Terminal emulation
vt100 = "0.15"

# Timing and async utilities
futures = "0.3"

# File operations
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
